# android-tree-sitter

./: .gitignore  .gitmodules  .nyx.yml  LICENSE  README.md  build.gradle  build.gradle.kts  build.py  build.sh  common-config.cmake  gen.grammar.cmake  genh.sh  gradle.properties  settings.gradle
.github/workflows/: build.yml
.nyx/: CHANGELOG.tpl
android-tree-sitter/: build.gradle  build.gradle.kts
android-tree-sitter/src/main/: AndroidManifest.xml
android-tree-sitter/src/main/cpp/: CMakeLists.txt  gen.header.cmake  main.cc  parser.cc  ts.cc  ts_cursor.cc  ts_language.cc  ts_lookahead_iterator.cc  ts_node.cc  ts_parser.cc  ts_query.cc  ts_query_cursor.cc  ts_tree.cc
android-tree-sitter/src/main/cpp/cache/: StrCache.cpp  StrCache.h
android-tree-sitter/src/main/cpp/include/: com_itsaky_androidide_treesitter_TSLanguage_Native.h  com_itsaky_androidide_treesitter_TSQuery_Native.h  com_itsaky_androidide_treesitter_TSTree_Native.h  com_itsaky_androidide_treesitter_TreeSitter.h
android-tree-sitter/src/main/cpp/utf16str/: JavaUTF16String.cpp  JavaUTF16StringFactory.cpp  UTF16String.cpp  UTF16String.h
android-tree-sitter/src/main/cpp/utils/: genh.sh  jni_macros.h  jni_string.cpp  jni_string.h  jni_utils.cpp  jni_utils.h  ts_exceptions.cpp  ts_exceptions.h  ts_header_conf.h  ts_log.h  ts_misc.h  ts_obj_utils.cc  ts_obj_utils.cpp  ts_obj_utils.h  ts_preconditions.cpp  ts_preconditions.h  ts_utils.h  utils.cc  utils.cpp  utils.h
android-tree-sitter/src/main/java/com/itsaky/androidide/treesitter/: DefaultObjectFactory.java  TSClosable.java  TSInputEdit.java  TSInputEncoding.java  TSLanguage.java  TSLanguageCache.java  TSLanguages.java  TSLookaheadIterator.java  TSNativeObject.java  TSNode.java  TSParser.java  TSPoint.java  TSQuantifier.java  TSQuery.java  TSQueryCapture.java  TSQueryCursor.java  TSQueryError.java  TSQueryMatch.java  TSQueryPredicateStep.java  TSRange.java  TSSymbolType.java  TSTree.java  TSTreeCursor.java  TSTreeCursorNode.java  TreeSitter.java  UTF16String.java
android-tree-sitter/src/main/java/com/itsaky/androidide/treesitter/internal/: NativeObjectFactory.java
android-tree-sitter/src/main/java/com/itsaky/androidide/treesitter/predicate/: SetDirectiveHandler.java  TSPredicateHandler.java
android-tree-sitter/src/main/java/com/itsaky/androidide/treesitter/string/: Assertions.java  StringDecoder.java  UTF16String.java  UTF16StringFactory.java
android-tree-sitter/src/main/java/com/itsaky/androidide/treesitter/util/: Consumer.java  (+5 more)
android-tree-sitter/src/test/java/com/itsaky/androidide/treesitter/: ExternalLanguageTest.java  LanguageCacheTest.java  NodeTest.java  ParserTest.java  QueryTest.java  ResourceUtils.java  TSInputEditTest.java  TSLanguageTest.java  TestBase.java  TestUtils.java  TreeCursorTest.java  TreeSitterTest.java  TreeTest.java  UTF16StringTest.java
android-tree-sitter/src/test/resources/: IInterface.aidl  SomethingParcelable.aidl  blocks-xml.scm  libtree-sitter-c  test.xml
annotation-processors/: build.gradle.kts
annotations/: build.gradle.kts
app/: build.gradle  build.gradle.kts
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: highlights-kt.scm
app/src/main/java/com/itsaky/androidide/androidtreesitter/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml  layout_text_input.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v29/: themes.xml
build-logic/: gradle.properties  settings.gradle.kts
build-logic/ats/: build.gradle.kts
build-logic/ats/src/main/java/: BuildConfig.java  build-logic.root-project.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/java/com/itsaky/androidide/treesitter/: BuildForHostTask.kt  BuildTreeSitterTask.kt  BuildTsCliTask.kt  TreeSitterPlugin.kt  TsGrammarPlugin.kt  common.kt  version.kt
cmake/: common-config.cmake  extract-debuginfo.cmake  grammar-generator-command.cmake  grammar-generator.cmake
gradle/: libs.versions.toml
grammars/: README.md  grammars.json
lib/: com_itsaky_androidide_treesitter_Languages.h  com_itsaky_androidide_treesitter_TSLanguage_TSLanguageNative.h  com_itsaky_androidide_treesitter_TSLanguages.h  com_itsaky_androidide_treesitter_TSLanguages_Native.h  com_itsaky_androidide_treesitter_TSNode.h  com_itsaky_androidide_treesitter_TSParser_Native.h  com_itsaky_androidide_treesitter_TSQueryCursor_Native.h  com_itsaky_androidide_treesitter_TSQuery_Native.h  com_itsaky_androidide_treesitter_TSTreeCursor_Native.h  com_itsaky_androidide_treesitter_TSTree_Native.h  com_itsaky_androidide_treesitter_TreeSitter.h  langs.cc  ts.cc  ts_cursor.cc  ts_language.cc  ts_node.cc  ts_parser.cc  ts_query.cc  ts_query_cursor.cc  ts_tree.cc  ts_utils.h  utils.cc
lib/include/: com_itsaky_androidide_treesitter_TSQuery_Native.h  com_itsaky_androidide_treesitter_TSTree_Native.h
src/main/java/com/itsaky/androidide/treesitter/: Languages.java  Node.java  Parser.java  TSNode.java  TSParser.java  TSTree.java  TSTreeCursor.java  Tree.java  TreeCursor.java  TreeCursorNode.java  TreeSitter.java
src/test/java/com/itsaky/androidide/treesitter/: JavaTest.java  NodeTest.java  ParserTest.java  TSInputEditTest.java  TestBase.java  TreeCursorTest.java
tree-sitter-java/: build.gradle.kts
tree-sitter-java/src/main/cpp/: CMakeLists.txt  gen.grammar.cmake  tree-sitter-java.cpp
tree-sitter-json/: build.gradle.kts
tree-sitter-json/src/main/: AndroidManifest.xml
tree-sitter-json/src/main/cpp/: CMakeLists.txt  tree-sitter-json.cpp
tree-sitter-kotlin/: build.gradle.kts
tree-sitter-kotlin/src/main/cpp/: CMakeLists.txt  tree-sitter-kotlin.cpp
tree-sitter-log/: build.gradle.kts
tree-sitter-log/src/main/cpp/: CMakeLists.txt  tree-sitter-log.cpp
tree-sitter-python/: build.gradle.kts
tree-sitter-python/src/main/cpp/: CMakeLists.txt  tree-sitter-python.cpp
tree-sitter-xml/: build.gradle.kts
tree-sitter-xml/src/main/cpp/: CMakeLists.txt  tree-sitter-xml.cpp
ts/plugin/: gradle.kt
(+38 files in other folders)
